--- a/apps/mantine-react-table-docs/pages/docs/getting-started/install.mdx
+++ b/apps/mantine-react-table-docs/pages/docs/getting-started/install.mdx
@@ -36,7 +36,7 @@ import { IconInfoCircle } from '@tabler/icons-react';
 
 The Quick Install instructions here assume you already have Mantine V7 installed and correctly configured with postcss in your project.
 
-<InstallCommand packagesString="mantine-react-table@alpha" />
+<InstallCommand packagesString="mantine-react-table@beta" />
 
 ### Install With Required Peer Dependencies (Recommended)
 
